sources/nginx/2.app-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-nginx
  namespace: nginx-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1 #set rewrite
spec:
  tls:
    - hosts:
      - zzz.becamex.com.vn
      secretName: becamex-secret-cert
  rules:
    # Tên miền truy cập
  - host: zzz.becamex.com.vn
    http:
      paths:
      - path: /
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: http-test-svc
          servicePort: 80
      # - path: /auth
      #   backend:
      #     # dịch vụ phục vụ tương ứng với tên miền và path
      #     serviceName: auth-auth-api
      #     servicePort: 80
